# chemical-mime-data

./: AUTHORS  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  acinclude.m4  aclocal.m4  chemical-mime-data.pc.in  configure  configure.ac
debian/: README.Debian  TODO  changelog  control  copyright  rules  watch
debian/patches/: 661326_rsvg-convert.patch  series  sourceforge.patch
freedesktop.org/: Makefile.am  Makefile.in
gnome/: Makefile.am  Makefile.in
html_docs/: Makefile.am  Makefile.in  cmd.css
icons/: Makefile.am  Makefile.in
icons/hicolor/: Makefile.am  Makefile.in
icons/pixmaps/: Makefile.am  Makefile.in
kde/: Makefile.am  Makefile.in
po/: ChangeLog  Makevars  de.po  fr.po
src/: Makefile.am  Makefile.in  chemical-mime-database.xml.in
xsl/: Makefile.am  Makefile.in  cmd_common.xsl  cmd_freedesktop_org.xsl  cmd_gnome-keys.xsl  cmd_gnome-mime.xsl  cmd_kde.xsl  cmd_website.xsl
