# Document  $Id: Makefile.am,v 1.3 2006/12/30 15:40:19 dleidert Exp $
# Summary   Makefile for the chemical-mime-data project.
#
# Copyright (C) 2004-2006 by Daniel Leidert.
#
# This file is free software. The copyright owner gives unlimited
# permission to copy, distribute and modify it.

SUBDIRS = hicolor pixmaps

MAINTAINERCLEANFILES = Makefile.in

